--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "better-npm-run": "^0.1.1",
+    "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -39,6 +40,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-cloudinary": "^1.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "ts-node": "^10.9.2",
@@ -50,6 +53,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.2",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
