--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-cloudinary": "^1.1.0",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "ts-node": "^10.9.2",
@@ -55,6 +56,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.2",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "nodemon": "^3.1.0"
