--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/app.js",
     "heroku-postbuild": "npm run build",
     "dev": "better-npm-run dev",
-    "test": "nyc mocha -r ts-node/register 'src/**/*.spec.ts' && nyc report --reporter=text-lcov | coveralls"
+    "test": "jest --collect-coverage --forceExit && coveralls < coverage/lcov.info"
   },
   "betterScripts": {
     "dev": {
@@ -34,16 +34,13 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "better-npm-run": "^0.1.1",
-    "chai": "^5.1.0",
     "chai-http": "^4.4.0",
     "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
-    "coveralls": "^3.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
-    "mocha": "^10.4.0",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -55,20 +52,23 @@
     "typescript": "^5.4.3"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/bcrypt": "^5.0.2",
-    "@types/chai": "^4.3.14",
-    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/mocha": "^10.0.6",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.2",
     "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "coveralls": "^3.1.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2"
   }
 }
