--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.2",
     "coveralls": "^3.1.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
