--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "coveralls": "^3.1.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
