--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "node dist/src/app.js",
     "heroku-postbuild": "npm run build",
     "dev": "better-npm-run dev",
     "test": "jest --collect-coverage --forceExit && coveralls < coverage/lcov.info"
